# lightweight_table_diff

./: pyproject.toml
src/lightweight_table_diff/: __init__.py  __main__.py  config.py  core.py  dimensions.py  normalisers.py  runner.py
src/lightweight_table_diff/adapters/: __init__.py  csv.py  hive_s3.py  parquet.py  sav.py
