[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-table-diff"
version = "0.1.1"
description = "Cell-level table diffing for Polars"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
  "polars>=1.38",
  "polars-checkpoint>=0.1.2",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
spss = [
  "pyreadstat",
]
hive = [
  "boto3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
